Added Order Module and Scheduler Config